[workspace]
members = ["core", "macros", "machines", "cpu-validation", "frontend"]
default-members = ["core", "machines", "frontend"]
resolver = "2"

# Optimize workspace crates in dev builds for real-time emulation speed
# while keeping debug info and fast incremental compilation.
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 2
