[package]
name = "phosphor-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "phosphor"
path = "src/main.rs"

[dependencies]
phosphor-core = { path = "../core" }
phosphor-machines = { path = "../machines" }
sdl2 = "0.37"
zip = "2"
egui_sdl2_gl = { version = "0.33", default-features = false }
egui = "0.33"
gl = "0.14"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
png = "0.17"
